grafana-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      containers:

      # Sidecar 1
      - name: grafana-sc-dashboard
        image: quay.io/kiwigrid/k8s-sidecar:2.7.1
      - name: grafana-sc-datasources
        image: quay.io/kiwigrid/k8s-sidecar:2.7.1
      - name: grafana
        image: grafana/grafana:13.0.1
        ports:
        - containerPort: 3000

        # 🔥 FIXED LOGIN (THIS IS THE IMPORTANT PART)
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
